--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Ysabeau+Infant:wght@200;300;400;500&display=swap');
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Ysabeau Infant', sans-serif;
+}
+:root {
+  --bg-color: #F3F3FF;
+  --accent-yellow: #FFD700;
+  --accent-green: #7FFF00;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: var(--bg-color);
+
 }
+
