--- a/src/components/AboutMeSection/AboutMeSection.scss
+++ b/src/components/AboutMeSection/AboutMeSection.scss
@@ -7,16 +7,20 @@
 .about_me_description{
   font-size: 22px;
   max-width: 500px;
-  padding-top: 30px;
+  padding: 30px 0px 30px 0px;
 }
 .about_me_description_welcome{
   font-size: 34px;
   font-weight: 500;
   margin-bottom: 55px;
 }
-
+.about_me_contacts_icons{
+  display: flex;
+  align-items: center;
+}
 .about_me_photo{
   padding-top: 70px;
+  padding-right: 50px;
 }
 .about_me_round_person{
   position: relative;
