--- a/src/index.scss
+++ b/src/index.scss
@@ -5,11 +5,17 @@
   font-family: 'Ysabeau Infant', sans-serif;
   color: #333333;
 }
-$alt-color:#ff556f ;
+
 $fuschia: #ff0081;
 $button-bg: $fuschia;
 $bg-color: #F3F3FF;
+$active-red: #fc1f40;
+$active-blue: #0038b4;
+$active-yellow: #ffb70d;
+
+$alt-color: #ff556f;
 $accent-color: #64B5F6;
+$accent-color2: #ffdc8e;
 
 body {
   background-color: $bg-color;
