--- a/src/components/AboutMeSection/AboutMeSection.scss
+++ b/src/components/AboutMeSection/AboutMeSection.scss
@@ -4,15 +4,18 @@
   display: flex;
   justify-content: space-between;
 }
+.about_me_text{
+  z-index: 3;
+}
 .about_me_description{
   font-size: 22px;
   max-width: 500px;
-  padding: 30px 0px 30px 0px;
+  padding: 50px 0px 40px 0px;
 }
 .about_me_description_welcome{
-  font-size: 34px;
+  font-size: 36px;
   font-weight: 500;
-  margin-bottom: 55px;
+  margin-bottom: 40px;
 }
 .about_me_contacts_icons{
   display: flex;
